--- a/src/styles.css
+++ b/src/styles.css
@@ -1,9 +1,6 @@
 * {
   margin: 0;
   padding: 0;
-}
-
-body {
   box-sizing: border-box;
 }
 
@@ -46,5 +43,23 @@ body {
 
 .navbar__menu-icon {
   cursor: pointer;
-  justify-content: flex-end;
+  position: absolute;
+  right: 0;
+  margin-right: 1em;
+  margin-top: 1em;
+  display: none !important;
+}
+
+@media screen and (max-width: 400px) {
+  .navbar__menu-icon {
+    display: flex !important;
+  }
+
+  .navbar__list {
+    display: none;
+  }
+
+  .navbar {
+    flex-direction: column;
+  }
 }
