--- a/src/styles.css
+++ b/src/styles.css
@@ -17,6 +17,13 @@
 .navbar__title {
   font-size: 1.5rem;
   margin: 0.5rem;
+  display: flex;
+  align-items: center;
+}
+
+.navbar__title-icon {
+  margin-right: 10px;
+  size: 0.5em;
 }
 
 .navbar__list {
@@ -50,16 +57,30 @@
   display: none !important;
 }
 
-@media screen and (max-width: 400px) {
+@media screen and (max-width: 450px) {
   .navbar__menu-icon {
     display: flex !important;
   }
 
   .navbar__list {
     display: none;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    width: 100%;
+  }
+
+  .navbar__item {
+    width: 100%;
   }
 
   .navbar {
     flex-direction: column;
   }
+}
+
+.active {
+  display: flex;
+  transition: all 1s ease;
 }
